--- a/package.json
+++ b/package.json
@@ -26,6 +26,23 @@
     "axios": "^0.19.0"
   },
   "devDependencies": {
-    "jest": "^24.9.0"
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
+    "np": "^5.1.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,json,md}": [
+      "npx prettier --write",
+      "git add"
+    ]
+  },
+  "np": {
+    "yarn": false
   }
 }
