--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.2",
-    "np": "^5.1.1"
+    "np": "^5.1.1",
+    "prettier": "^1.18.2"
   },
   "husky": {
     "hooks": {
