--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "files": [
     "src/*"
   ],
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "release": "np",
     "test": "jest"
